# kitaebot

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  workflow-test
.githooks/: pre-commit
.github/workflows/: ci.yml
deploy/: configuration.nix  flake.nix
nix/: lightpanda.nix
specs/: 00-overview.md  01-agent-loop.md  02-provider.md  03-tools.md  04-session.md  05-workspace.md  06-soul.md  06-system-prompt.md  07-heartbeat.md  08-binaries.md  08-cli.md  09-vm.md  10-channels.md  11-safety.md  12-context.md  13-credentials.md  14-memory.md  15-sandbox.md  16-activity.md  17-notify.md  18-egress-filter.md  template.md
src/: activity.rs  agent.rs  chat_completion.rs  commands.rs  config.rs  context.rs  daemon.rs  dispatch.rs  error.rs  github_channel.rs  heartbeat.rs  lock.rs  main.rs  openrouter.rs  provider.rs  repl.rs  runtime.rs  safety.rs  sandbox.rs  secrets.rs  session.rs  socket.rs  stats.rs  telegram.rs  time.rs  tools.rs  types.rs  workspace.rs
src/agent/: actor.rs  envelope.rs  handle.rs  mod.rs
src/clients/: chat_completion.rs  mod.rs  telegram.rs
src/engine/: flat.rs  mod.rs
src/engine/lcm/: compaction.rs  engine.rs  mod.rs  schema.rs  summarize.rs  tools.rs
src/engine/lcm/migrations/: 0001_baseline.sql
src/provider/: completions.rs  mock.rs  mod.rs  openrouter.rs  wire.rs
src/tools/: cli_runner.rs  direnv.rs  exec.rs  file_edit.rs  file_read.rs  file_write.rs  github.rs  glob_search.rs  grep.rs  mock.rs  mod.rs  path.rs  stub.rs  web_fetch.rs  web_search.rs
src/tools/git/: commit.rs  git_cli.rs  git_clone.rs  mod.rs  push.rs  test_helpers.rs  url.rs
src/tools/github/: ci_status.rs  commit.rs  gh.rs  gh_cli.rs  git_cli.rs  git_clone.rs  mod.rs  pr_comment.rs  pr_create.rs  pr_diff_comments.rs  pr_diff_reply.rs  pr_list.rs  pr_reviews.rs  push.rs  test_helpers.rs  types.rs  url.rs
src/tools/network/: github.rs  mod.rs  web_search.rs
src/tools/network/github/: api.rs  ci_status.rs  client.rs  commit.rs  gh_cli.rs  git_cli.rs  git_clone.rs  mod.rs  pr_comment.rs  pr_create.rs  pr_diff_comments.rs  pr_diff_reply.rs  pr_list.rs  pr_reviews.rs  push.rs  test_helpers.rs  url.rs
tests/: e2e.rs  integration.rs  kchat.rs
vm/: configuration.nix  flake.nix  test-egress.nix
vm/prompts/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
vm/test-fixtures/: server.crt  server.key
