[package]
name = "kitaebot"
version = "0.0.1"
edition = "2024"
authors = ["amackillop"]
description = "An autonomous agent"
license = "MIT"
repository = "https://github.com/amackillop/kitaebot"
readme = "README.md"
keywords = ["agent", "autonomous", "ai", "bot", "llm"]
categories = ["command-line-utilities"]

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Pedantic exceptions
module_name_repetitions = "allow"
must_use_candidate = "allow"

[dependencies]
