[package]
name = "kitaebot"
version = "0.0.1"
edition = "2024"
authors = ["amackillop"]
description = "An autonomous agent"
license = "MIT"
repository = "https://github.com/amackillop/kitaebot"
readme = "README.md"
keywords = ["agent", "autonomous", "ai", "bot", "llm"]
categories = ["command-line-utilities"]

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Pedantic exceptions
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Cargo exceptions (transitive deps outside our control)
multiple_crate_versions = "allow"

[[bin]]
name = "kitaebot"
path = "src/main.rs"

[[bin]]
name = "kchat"
path = "src/bin/kchat.rs"

[features]
mock-network = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "2.0"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "process", "signal", "sync", "time", "fs"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json"] }
glob = "0.3"
landlock = "0.4"
grep = "0.4.1"
ignore = "0.4"
regex = "1"
toml = "0.8"
tracing = "0.1"
tokio-util = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http = "1.0"
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
assert_cmd = "2.0"
predicates = "3.1"
